setup database and seeder

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-#DB_USERNAME=postgres
-#DB_PASSWORD=password
+#DB_USERNAME=your_username_postgres
+#DB_PASSWORD=your_password_postgres
 #DB_HOST=127.0.0.1
 #DB_NAME=book_borrow_app
