--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "db:create": "npx sequelize-cli db:create",
     "db:migrate": "npx sequelize-cli db:migrate",
     "db:seed": "npx sequelize-cli db:seed:all",
-    "db:rollback": "npx sequelize-cli db:migrate:undo",
+    "db:rollback": "npx sequelize-cli db:migrate:undo:all",
     "db:reset": "npx sequelize-cli db:migrate:undo:all && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all"
   },
   "author": "",
