--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon -q src/app.js",
-    "test": "NODE_ENV=test jest --forceExit",
+    "test": "NODE_ENV=test && npx sequelize-cli db:migrate:undo:all --env test && npx sequelize-cli db:migrate --env test && npx sequelize-cli db:seed:all --seeders-path src/infrastructure/database/seeders/test --env test && jest --forceExit",
     "db:create": "npx sequelize-cli db:create",
-    "db:create:all": "npx sequelize-cli db:create && npx sequelize-cli db:create --env test",
     "db:migrate": "npx sequelize-cli db:migrate",
+    "db:create:all": "npx sequelize-cli db:create && npx sequelize-cli db:create --env test",
     "db:migrate:all": "npx sequelize-cli db:migrate && npx sequelize-cli db:migrate --env test",
     "db:seed:all": "npx sequelize-cli db:seed:all && npx sequelize-cli db:seed:all --env test",
     "db:rollback:all": "npx sequelize-cli db:migrate:undo:all && npx sequelize-cli db:migrate:undo:all --env test ",
-    "db:reset": "npx sequelize-cli db:migrate:undo:all && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all"
+    "db:reset:all": "npx sequelize-cli db:migrate:undo:all && npx sequelize-cli db:migrate:undo:all --env test && npx sequelize-cli db:migrate && npx sequelize-cli db:migrate --env test && npx sequelize-cli db:seed:all --seeders-path src/infrastructure/database/seeders/development && npx sequelize-cli db:seed:all --seeders-path src/infrastructure/database/seeders/test --env test"
   },
   "author": "",
   "license": "ISC",
