documentation api POST api/borrow || using Swagger

--- a/src/interfaces/swagger/tags.yaml
+++ b/src/interfaces/swagger/tags.yaml
@@ -3,3 +3,5 @@ tags:
     description: User endpoints
   - name: Book API
     description: Book endpoints
+  - name: Borrow API
+    description: Borrow endpoints
