--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,11 @@
 #DB_PASSWORD=your_password_postgres
 #DB_HOST=127.0.0.1
 #DB_NAME=book_borrow_app
+
+NODE_ENV=development
+PORT=8080
+
+DB_USERNAME=postgres
+DB_PASSWORD=password
+DB_HOST=127.0.0.1
+DB_NAME=book_borrow_app
